<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- general strings -->
    <string name="appname">Slimgress</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

     <!-- activity strings -->
    <string name="auth_login">Logging in&#8230;</string>
    <string name="auth_refresh">Refreshing token&#8230;</string>
    <string name="auth_identity">Select identity</string>
    <string name="auth_username">User-Name</string>
    <string name="splash_failure_title">Authentication failed</string>
    <string name="splash_failure_msg">Authentication failed. This can have several reasons, e.g. you are not authorized to use your account.</string>
    <string name="splash_loading">Loading game&#8230;</string>
    <string name="main_level">L1</string>
    <string name="main_agent">Agent</string>
    <string name="main_agentinfo">AP: 0 / XM: 0 %</string>
    <string name="main_ops">OPS</string>
    <string name="main_comm">COMM</string>
    <string name="ops_inventory">Inventory</string>
    <string name="ops_user">User</string>
    <string name="ops_device">Device</string>
    <string name="portal_energy">Energy: %s</string>

    <!-- other -->
    <string name="dummy">Dummy</string>
    <string name="location_inaccurate">Scanner disabled - location inaccurate</string>
    <string name="scanning_local_area">Scanning local area</string>
    <string name="preparing_the_inventory">Preparing the inventory</string>
    <string name="refreshing_the_inventory">Refreshing the inventory</string>
    <string name="scan_failed">Scan failed</string>
    <string name="scan_complete">Scan complete</string>
    <string name="user_screen_coming_soon">User screen coming soon!</string>
    <string name="build_number">Build number</string>

    <string name="credits">
        <![CDATA[
        <h1>Assets, libraries and services used in this application</h1>
        <ul>
        <li>AppCompat and Material Design components for most widgets (Apache 2)</li>
        <li><a href="https://github.com/google/guava">Guava</a> for various android utilities (<a href="https://github.com/google/guava/blob/master/LICENSE">Apache 2</a>)</li>
        <li><a href="https://github.com/square/okhttp">OkHttp</a> for HTTP(s) requests, generally (<a href="https://github.com/square/okhttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
        <li><a href="https://github.com/maplibre/maplibre-native">MapLibre Native</a> is the map taking centre stage in the scanner (<a href="https://github.com/maplibre/maplibre-native/blob/main/LICENSE.md">BSD 2-Clause</a> et <a href="https://github.com/maplibre/maplibre-native/blob/main/LICENSES.core.md">al</a>)</li>
        <li><a href="https://github.com/ACRA/acra">ACRA</a> for crash reporting (<a href="https://github.com/ACRA/acra/blob/master/LICENSE">Apache 2</a>)</li>
        <li><a href="https://github.com/bumptech/glide">Glide</a> for making image loading much simpler (<a href="https://github.com/google/guava/blob/master/LICENSE">Apache 2</a>)</li>
        </ul>
        <h1>Authors</h1>
        <ul>
        <li>"Opengress Team" - server code, and client code after 2020</li>
        <li>"Opengress Team" - Logos and player icon</li>
        <li><a href="https://github.com/Norman0406">Norman0406</a> - Portal icons, app structure, ancient API stubs</li>
        <li>The map in the main activity is sourced from Carto.
        The map data is © <a href="https://www.openstreetmap.org/copyright/">OpenStreetMap</a> contributors and is available under the Open Database License.
        The tiles (images from which represent the map data on-screen) are © <a href="https://carto.com/attribution/">CartoDB</a>.
        </li>
        </ul>
        ]]>
    </string>
    <string name="slimgress_version_unknown">Slimgress (Opengress dev client)</string>
    <string name="device_heading_credits">Credits</string>
    <string name="upgd">UPGD</string>
    <string name="dply">DPLY</string>
    <string name="l0">L0</string>
    <string name="item_name_portal_key">Portal Key</string>
    <string name="device_text_button_show">Show</string>
    <string name="device_heading_build">Build</string>
    <string name="device_heading_user">User</string>
    <string name="device_link_profile">Link Profile</string>
    <string name="device_telegram_profile_status_unlinked">Telegram profile unlinked</string>
    <string name="device_telegram_profile_status_linked">Telegram profile linked</string>
    <string name="device_button_profile_link">Link</string>
    <string name="device_button_profile_unlink">Unlink</string>
    <string name="device_string_heading_features">Optional Features</string>
    <string name="device_description_performance">Performance</string>
    <string name="fragment_device_show_inventory_search">Show inventory search</string>
    <string name="fragment_device_show_inventory_sort">Show inventory key sort</string>
    <string name="fragment_device_show_inventory_level_filter">Show inventory item level filter</string>
    <string name="fragment_device_show_inventory_rarity_filter">Show inventory rarity filter</string>
    <string name="fragment_inventory_hint_search">Search</string>
    <string name="select_image_size">Image size</string>
    <string name="select_map_tiles">Map tiles</string>
    <string name="fragment_device_android_notifications">Android Notifications</string>
    <string name="device_notification_you_are_mentioned_in_comm">You are mentioned in COMM</string>
    <string name="device_notification_portal_under_attack">Portal under attack</string>
    <string name="device_notification_recruiting_and_faction_activity">Recruiting and faction activity</string>
    <string name="device_notification_news_stories">News stories</string>
    <string name="telegram_game_notifications_portal_under_attack_etc">Game notifications (Portal under attack, etc)</string>
    <string name="telegram_game_related_events_offers_and_news_updates">Game-related events, offers and news updates</string>
    <string name="inventory_button_recycle">RECYCLE</string>
    <string name="inventory_button_drop">DROP</string>
    <string name="inventory_button_recharge">RECHARGE</string>
    <string name="inventory_button_fire">FIRE</string>
    <string name="inventory_button_use">USE</string>
    <string name="telegram_notifications">Telegram Notifications</string>
    <string name="use_high_precision_compass">Use high precision compass</string>
    <string name="nothing_to_display">Nothing to display…</string>
    <string name="share">Share</string>
    <string name="new_access">NEW ACCESS</string>
    <string name="hacking_in_progress"><![CDATA[Hacking\n
    Portal…]]></string>
    <string name="comms_tab_all">ALL</string>
    <string name="comms_tab_faction">FACTION</string>
    <string name="comms_tab_alert">ALERT</string>
    <string name="comms_tab_info">INFO</string>
    <string name="start_broadcasting_here">Start broadcasting here</string>
    <string name="comms_transmit">Transmit</string>
    <string name="xm_value">XM Value:</string>
    <string name="recycle_something">"RECYCLE: "</string>
    <string name="fire_xmp">FIRE XMP</string>
    <string name="new_portal">NEW PORTAL</string>
    <string name="navigate">NAVIGATE</string>
    <string name="go_to_opr">OPR</string>
    <string name="fire_button_text">FIRE</string>
    <string name="done_button_text">DONE</string>
    <string name="you_are_moving_too_fast">You are moving too fast</string>
    <string name="server_error">Server error</string>
    <string name="you_don_t_have_enough_xm">You don\'t have enough XM!</string>
    <string name="weapon_does_not_exist">Weapon does not exist</string>
    <string name="missed_all_resonators">Missed all resonators!</string>
    <string name="fire_button_text_use">USE</string>
    <string name="flipcard_confirm_selection">CONFIRM SELECTION</string>
    <string name="flipcard_select_target">SELECT TARGET</string>
    <string name="flipcard_confirm">CONFIRM</string>
    <string name="flipcard_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="portal">Portal</string>
    <string name="out_of_range">Target portal is out of range</string>
    <string name="flipcard_not_applicable_for_resource">Wrong item type: Needs to be a flipcard!</string>
    <string name="flipcard_invalid_target">Invalid target for that flipcard!</string>
    <string name="CANNOT_FLIP">Target portal is already aligned!</string>
    <string name="FLIPCARD_TOO_SOON">Portal can only be flipped once per hour!</string>
    <string name="session_expired_log_in_again">Your user session has expired. You will have to log in again.</string>
    <string name="send_me_updates">Send me Opengress related news, offers, promotions and updates</string>
    <string name="read_the_full_tos">Read the full Terms of Service before accepting these terms and conditions.</string>
    <string name="rules_short_version">By clicking agree, you agree to play by the rules, use the service as intended and to treat others with diginity and respect.\n\nOpengress is a location based game.\n\nYour location is collected by this application and may be visible to other users when you take certain actions in the game.</string>
    <string name="force_clear_data_and_resync">Force clear data and resync</string>
    <string name="data">Data</string>
    <string name="force_sync">Force Sync</string>
    <string name="mod_text_remove_mod">REMV</string>
    <string name="uncaptured">uncaptured</string>
    <string name="btn_edit">EDIT</string>
    <string name="placeholder_agent_name">[Agent]</string>
    <string name="back_button_back">く</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="ops_tab_name_score">Score</string>
    <string name="btn_ok">OK</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="submit">Submit</string>
    <string name="validating_passcode">Validating passcode...</string>
    <string name="redeem_passcode">Redeem Passcode</string>
    <string name="passcode_confirmed">PASSCODE CONFIRMED</string>
    <string name="validating">Validating...</string>
    <string name="passcode">Passcode</string>
    <string name="scanner_disabled_network_connection_lost">Scanner disabled - network connection lost</string>
    <string name="scanner_disabled_collect_more_xm">Scanner Disabled; Collect more XM</string>
</resources>
