<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.ActivitySplash">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_short_version" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_orange"
        android:fontFamily="sans-serif"
        android:padding="20dp"
        android:text="@string/read_the_full_tos"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/emailOptIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_me_updates"
        android:checked="true" />
</LinearLayout>
