<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded,ContentDescription,RelativeOverlap">

    <fragment
        android:id="@+id/map"
        class="net.opengress.slimgress.ScannerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/agentap"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:indeterminate="false"
                android:progress="100" />

            <LinearLayout
                style="@style/AppTheme"
                android:id="@+id/activity_main_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    app:srcCompat="@android:drawable/ic_menu_report_image"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.87"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/agentxm"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:progress="100" />

                    <LinearLayout
                        android:id="@+id/agentinfobar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/agentLevel"
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:gravity="center_horizontal"
                            android:shadowColor="#000000"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="1"
                            android:text="@string/main_level"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#EACA75" />

                        <TextView
                            android:id="@+id/agentname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:shadowColor="#000000"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="1"
                            android:text="@string/main_agent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/agentinfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="7.5dp"
                            android:shadowColor="#000000"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="1"
                            android:text="@string/main_agentinfo"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#FFFFFF"
                            android:visibility="invisible" />
                    </LinearLayout>

                </LinearLayout>

                <!--                style="@style/ButtonStyle"-->
                <Button
                    android:id="@+id/buttonOps"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/main_ops" />
            </LinearLayout>

<!--            style="@style/ShortButtonStyle"-->
            <Button
                android:id="@+id/buttonComm"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/main_comm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/quickMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/commsFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </RelativeLayout>


</RelativeLayout>
